# imdb-top250-scraper

./: .gitignore  Dockerfile.test  Makefile  _old_requirements-test.txt  docker-compose.yml
.github/workflows/: ci.yml
contracts/: pyproject.toml  python_contracts.py
docs/contracts/: CONTRACT_TESTS_INTEGRATION.md  CONTRACT_TESTS_STATUS.md  DEPLOYMENT_CONTRACTS.md  FINAL_CONTRACT_TESTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  START_HERE.md  TEST_INTEGRATION.md
src/api_fastapi/: Dockerfile
src/api_fastapi/src/: main.py
src/api_fastapi/tests/: test_enrichment_stream.py
src/contracts/: __init__.py  pyproject.toml  schemas.json  test_contracts.py
src/scraper_python/src/imdb_top250_scraper/: models.py  validation.py
src/worker_ai_python/: Dockerfile  _old_requirements.txt  pyproject.toml
src/worker_ai_python/src/: main.py
