[project]
name = "imdb-ai-worker"
version = "0.1.0"
description = "AI worker service for IMDb data enrichment"
requires-python = ">=3.11"
dependencies = [
    "redis==5.0.3",
    "httpx==0.27.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = []
